--- a/src/main/resources/webui/css/auditing.css
+++ b/src/main/resources/webui/css/auditing.css
@@ -7,12 +7,16 @@
     width: 60%;
     height: 100%;
     border-right: var(--border) solid var(--border-color);
+    overflow-x: hidden;
+    overflow-y: auto;
 }
 
 #auditing-assets {
     width: 40%;
     height: 100%;
     background: var(--main-color-2);
+    overflow-x: hidden;
+    overflow-y: auto;
 }
 
 .available-assets-div {
@@ -31,7 +35,7 @@
     margin-left: 10%;
     height: 70%;
     overflow-x: hidden;
-    overflow-y: scroll;
+    overflow-y: auto;
     background: var(--main-color-2);
 }
 
@@ -66,40 +70,5 @@
 
 #assets-available-for-audit > li[disabled].selected-asset {
     background: var(--main-color-4);
-    color: var(--main-color-2);
-}
-
-#auditing-start-stop-button {
-    width: 75%;
-    border: none;
-    margin-top: 5%;
-    margin-left: 12.5%;
-    height: 7.5%;
-    padding: 0;
-    font-size: var(--action-button-font-size);
-    cursor: pointer;
-}
-
-#auditing-start-stop-button.start-auditing {
-    background: var(--main-color-1);
-    color: var(--main-color-2);
-}
-
-#auditing-start-stop-button.abort-auditing {
-    background: var(--main-color-5);
-    color: var(--main-color-2);
-}
-
-#auditing-start-stop-button:disabled {
-    cursor: not-allowed;
-}
-
-#auditing-start-stop-button.start-auditing:disabled {
-    background: var(--main-color-4);
-    color: var(--main-color-2);
-}
-
-#auditing-start-stop-button.abort-auditing:disabled {
-    background: var(--main-color-6);
     color: var(--main-color-2);
 }
