SD-124: implement script development logic

--- a/src/main/resources/webui/css/main.css
+++ b/src/main/resources/webui/css/main.css
@@ -53,6 +53,11 @@ body {
     cursor: not-allowed;
 }
 
+.small-icon {
+    width: 2.5vh;
+    height: 2.5vh;
+}
+
 .success-button {
     background: var(--main-color-1);
     color: var(--main-color-2);
