SD-124: implement metamask connection check

--- a/src/main/resources/webui/css/main.css
+++ b/src/main/resources/webui/css/main.css
@@ -17,6 +17,8 @@
     --main-color-4: #8C9DCF;
     --main-color-5: #D81E5B;
     --main-color-6: #E95D8C;
+    --main-color-7: #FDDD0D;
+    --main-color-8: #3ECC76;
     --code-font-family: monospace;
 }
 
