--- a/src/main/resources/webui/css/main.css
+++ b/src/main/resources/webui/css/main.css
@@ -29,14 +29,14 @@ body {
     background: var(--main-color-2);
 }
 
-.content-div {
+.content {
     width: 100%;
     height: calc(100% - var(--navbar-button-border) - 2 * var(--navbar-button-padding) - var(--navbar-font-size));
     margin: 0;
     padding: 0;
 }
 
-.hidden-div {
+.hidden {
     display: none !important;
 }
 
@@ -80,11 +80,11 @@ body {
     color: var(--main-color-2);
 }
 
-.output-div {
+.output {
     color: var(--main-color-1);
 }
 
-.output-div button {
+.output button {
     border: none;
     margin: 1%;
     padding: 1%;
@@ -94,14 +94,16 @@ body {
     color: var(--main-color-2);
 }
 
-.output-div button:disabled {
+.output button:disabled {
     background: var(--main-color-4);
     color: var(--main-color-2);
     cursor: not-allowed;
 }
 
-.output-div img {
-    margin-left: 10%;
-    width: 80%;
+.output img {
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 80%;
+    display: block;
     border: var(--border) solid var(--border-color);
 }
