--- a/src/main/resources/webui/css/auditing.css
+++ b/src/main/resources/webui/css/auditing.css
@@ -4,8 +4,10 @@
 }
 
 .auditing-output {
-    width: 60%;
+    width: 58%;
     height: 100%;
+    padding-left: 1%;
+    padding-right: 1%;
     border-right: var(--border) solid var(--border-color);
     overflow-x: hidden;
     overflow-y: auto;
