--- a/src/main/resources/webui/css/script-development.css
+++ b/src/main/resources/webui/css/script-development.css
@@ -29,7 +29,8 @@
 
 .script-output {
     height: 96%;
-    background: blue;
+    padding-left: 1%;
+    padding-right: 1%;
     background: var(--main-color-2);
     transition: height 0.5s ease-out;
 }
