--- a/src/main/resources/webui/css/main.css
+++ b/src/main/resources/webui/css/main.css
@@ -80,6 +80,10 @@ body {
     color: var(--main-color-2);
 }
 
+.error-label {
+    color: var(--main-color-5);
+}
+
 .output {
     color: var(--main-color-1);
 }
@@ -115,4 +119,38 @@ body {
 
 .output th, .output tr, .output td {
     padding: var(--padding);
+}
+
+.output textarea {
+    width: 100%;
+    min-width: 100%;
+    max-width: 100%;
+    height: 20%;
+    padding: var(--padding);
+    font-family: var(--code-font-family);
+    font-size: var(--small-font-size);
+    border: var(--border) solid var(--main-color-1);
+    background: var(--main-color-2);
+    color: var(--main-color-1);
+}
+
+.output textarea:disabled {
+    cursor: not-allowed;
+    border: var(--border) solid var(--main-color-4);
+    color: var(--main-color-4);
+}
+
+.output input[type="file"] {
+    border: none;
+    margin: 1%;
+    padding: 1%;
+    font-size: var(--small-font-size);
+    background: var(--main-color-1);
+    color: var(--main-color-2);
+}
+
+.output input[type="file"]:disabled {
+    background: var(--main-color-4);
+    color: var(--main-color-2);
+    cursor: not-allowed;
 }
